# archtree

./: PHILOSOPHY.md  README.md  bootstrap.zsh  pyproject.toml
src/archtree/: __init__.py  __main__.py  architectures.py  cli.py  models.py  renderer.py  roles.py  sorting.py  tree.py
src/archtree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_architectures.py  test_renderer.py  test_roles.py  test_sorting.py
tests/fixtures/: __init__.py
